[BUGFIX] Align inline action icons inside the content editable area

--- a/Resources/Private/Styles/InlineEditing.scss
+++ b/Resources/Private/Styles/InlineEditing.scss
@@ -14,8 +14,6 @@
   width: 60px;
   margin: 0 0 0 auto;
   padding: 0;
-  position: relative;
-  top: -3px;
 
   .icon {
     &:hover {
